--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 [URL]
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Level1.Level1
-GameDefaultMap=/Game/Level1.Level1
+EditorStartupMap=/Game/Main_Menu.Main_Menu
+GameDefaultMap=/Game/Main_Menu.Main_Menu
 GlobalDefaultGameMode=/Game/BP_MyGameMode.BP_MyGameMode_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
@@ -54,5 +54,3 @@ AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
-
-
